--- a/app/globals.css
+++ b/app/globals.css
@@ -53,6 +53,12 @@
   box-shadow: inset 0 0 12px #bf97ff70;
 }
 
+@media (min-width: 350px) and (max-width: 400px) {
+  .hero-content {
+    margin-top: 100px;
+  }
+}
+
 /* Hide scrollbar for IE, Edge and Firefox */
 .scrollbar-hidden {
   -ms-overflow-style: none; /* IE and Edge */
